--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'curriculum:standard_list' %}">Ta'lim dasturi</a>
+        </li>
         {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Tizimdan chiqish</a>
@@ -40,8 +43,6 @@
     </div>
   </div>
 </nav>
-
-
   {% block content %}
   {% endblock %}
 
