--- a/curriculum/templates/curriculum/subject_list_view.html
+++ b/curriculum/templates/curriculum/subject_list_view.html
@@ -2,15 +2,29 @@
 
 
 {% block content %}
+<style>
+img{
+    width: 100%;
+    height: 200px;
+}
+</style>
 
-{% for subject in standards.subjects.all %}
-
-{{subject.name}}
-{{subject.description}}
-
-{% endfor %}
+<div class='container'>
+    <div class='row justify-content-around'>
+        {% for subject in standards.subjects.all %}
+            <div class='col'>
+                <div class="card" style="width: 18rem;">
+                    <img src="{{subject.image.url}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{subject.name}}</h5>
+                        <p class="card-text">{{subject.description}}</p>
+                        <a href="#" class="btn btn-primary">Darslarga o'tish</a>
+                    </div>
+                </div>
+            </div>
+        
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock content %}
-
-
-
