--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,9 @@
           <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Ro'yhatdan o'tish</a>
         </li>
         {% endif %}
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'admin:index' %}">admin</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
