--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
+  {% load static %}
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
